--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="manifest" href="manifest.webmanifest" />
     <meta name="theme-color" content="#1976d2" />
+    <script src="https://cdn.kainonly.com/assets/pouchdb/pouchdb-7.3.1.min.js" async></script>
   </head>
   <body>
     <app-root></app-root>
