--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <script
+      async
+      type="application/javascript"
+      src="https://cdn.kainonly.com/npm/localforage@1.10.0/dist/localforage.min.js"
+    ></script>
   </head>
   <body>
     <app-root></app-root>
