--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,16 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="stylesheet" href="https://cdn.kainonly.com/npm/cropperjs@1.5.13/dist/cropper.min.css" />
     <script
       async
       type="application/javascript"
       src="https://cdn.kainonly.com/npm/localforage@1.10.0/dist/localforage.min.js"
+    ></script>
+    <script
+      async
+      type="application/javascript"
+      src="https://cdn.kainonly.com/npm/cropperjs@1.5.13/dist/cropper.min.js"
     ></script>
   </head>
   <body>
